--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+server.port=8088
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/testbs
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Hibernate.X
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.show_sql=true
+
+#????? ???????? HTTP ?????? PUT, PATCH, DELETE
+spring.mvc.hiddenmethod.filter.enabled=true
