--- a/pom.xml
+++ b/pom.xml
@@ -65,9 +65,13 @@
             <version>8.0.29</version>
             <scope>runtime</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
